# elements-boilerplate

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd  main.cpp
resources/: config.json
